@@ -1,5 +1,8 @@
 2002-09-24  Peter Osterlund  <petero2@telia.com>
 
+	* p4.el.html: Added documentation for the different key maps used
+	  by p4.el.
+
 	* (p4-font-lock-buffer): Fixed problem with delays when pressing
 	  C-l caused by hilit19 unnecessarily trying to rehighlight the
 	  buffer.
